--- a/PastProjects2.html
+++ b/PastProjects2.html
@@ -51,7 +51,7 @@
 							<p>This Math Tutor application teaches users simple arithmetic and providing learning assesments such as quizes that contain multiple choice and short answers.</p>
 						</header>
 						<section>
-								<a href="#" class="image fit"><img src="images/MathTutorScreen.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/MathTutorScreen.png" alt="" /></a>
 								<ul class="actions">
 									<li><a href="https://github.com/RonaldYou/Math-Tutor" class="button">Github</a></li>
 								</ul>
