--- a/PastProjects.html
+++ b/PastProjects.html
@@ -51,7 +51,7 @@
 							<p>One of my past projects is a movie theatre application. This application allows users to select a movie of their choice and the seat location providing a positive theatre experience.</p>
 						</header>
 						<section>
-								<a href="#" class="image fit"><img src="images/theatre.PNG" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/theatre.png" alt="" /></a>
 								<ul class="actions">
 									<li><a href="https://github.com/RonaldYou/Movie-Theatre#movie-theatre" class="button">Github</a></li>
 								</ul>
