--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							<h2>Future Aspirations</h2>
 							<p>"If you can dream it, you can do it" - Walt Disney</p>
 						</header>
-						<p>In the future I hope to graduate highschool and university in a field of science or math an engineer of any kind. In whatever field I work in, I want to 
+						<p>In the future I hope to graduate highschool and university in a field of science or math to become an engineer of any kind. In whatever field I work in, I want to 
 						climb the ranks of the company and achieve the highest position I can.</p>
 						
 					</div>
