--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 						</header>
 						<h3>In School:</h3>
 							<ul style="margin-top:-15px;">
+								<li>Grade 11 Sir Isaac Newton Physics Contest Distinction</li>
+								<li>Grade 11 Avagadro Chemistry Contest Distinction</li>
+								<li>Grade 11 Hypatia Math Contest Distinction</li>
+								<li>Grade 11 Euclid Math Contest Distinction</li>
+								<li>Grade 10 ___</li>
+								<li>Grade 9 Pascal Math Contest Distinction</li>			
 								<li>Grade 9 honour role x2</li>
 								<li>Grade 8 leadership award</li>
 								<li>Grade 8 FLL - Most Innovative Idea Award</li>
