--- a/PastProjects.html
+++ b/PastProjects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!--<!DOCTYPE HTML>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -77,4 +77,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+</html>-->
