--- a/PastProjects2.html
+++ b/PastProjects2.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -77,4 +78,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+</html> -->
