--- a/FutureProjects.html
+++ b/FutureProjects.html
@@ -48,7 +48,8 @@
 					<div class="container">
 						<header class="major">
 							<h2>Future Projects</h2>
-							<p>Some future projects I would like to create are applications to solve prominent problems while being user friendly for everyone.</p>
+							<li>Task Tracker</li>
+							<li>Vegify</li>
 						</header>
 						<section>
 								<a href="#" class="image fit"><img src="images/futurePic.jpg" alt="" /></a>
