--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<div class="content">
 						<header>
 							<h2>Ronald You</h2>
-							<p>A kind, caring and responsible student <br /> from  William Lyon Mackenzie</p>
+							<p>being updated</p>
 						</header>
 						<span class="image"><img src="images/me4.jpg" alt="" /></span>
 					</div>
